<resources>
    <string name="app_name">MyLearningApp</string>
    <string name="view_login">Manangment Building</string>
    <string name="details">Easily control your building from anywhere</string>
    <string name="userName">User Name</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>
    <string name="noaccount">Dont have an account ?</string>
    <string name="createaccount">Create</string>
    <string name="forgetpass">Forgot your password?</string>
    <string name="starttcontrolnow">Start managing your building now with ease</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="idNum">ID Number</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="next">Next</string>
    <string name="informationAdmin">Information Admin</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_building">Name Of Building</string>
    <string name="area">Area</string>
    <string name="address">Adress</string>
    <string name="num_of_floors">Number Of Floors</string>
    <string name="num_of_apartments">Number of apartments</string>
    <string name="type_building">Type Of Building:</string>
    <string name="information_building">Information Building</string>
    <string name="commercial">commercial</string>
    <string name="residential">residential</string>
    <string name="subscriber">subscriber</string>
    <string name="pesonInformation">Pesonal Information</string>
    <string name="buildInformation">Building Information</string>
    <string name="service">Services</string>
    <string name="partInformation">Information Partments</string>
    <string name="num_of_entered">Number Of An Entered</string>
    <string name="num_of_sublimated">Number Of A Sublimated</string>
    <string name="water">Water :</string>
    <string name="municipality">Municipality</string>
    <string name="Available_Services">Available Services</string>
    <string name="electricity">Electricity :</string>
    <string name="sweet_water">Sweet Water</string>
    <string name="Security">Security guard</string>
    <string name="Sublimated">Sublimated</string>
    <string name="The_Cleaner">The Cleaner</string>
    <string name="Periodic_maintenance">Periodic Maintenance</string>
    <string name="emergency_maintenance">emergency maintenance</string>
    <string name="Fund_Services">Fund Services</string>
    <string name="Apartment_number_one">Apartment number one</string>
    <string name="Partments">Partments</string>
    <string name="Apartment_owner">Apartment Owner</string>
    <string name="Apartment_area">Apartment area</string>
    <string name="contract_system">Contract System</string>
    <string name="floor">floor</string>
    <string name="num_of_rooms">num of rooms</string>
    <string name="lease">lease</string>
    <string name="name_of_employe">Name Of Employe</string>
    <string name="number_of_apartments_benefited">number of apartments benefited</string>
    <string name="beneficiary">beneficiary</string>
    <string name="non_beneficiary">non-beneficiary</string>
    <string name="Salary">Salary</string>
    <string name="public_subscription">Public Subscription</string>
    <string name="electrical_generator">Electrical Generator</string>
    <string name="Subtype">Subtype</string>
    <string name="subscription_system">Subscription System</string>
    <string name="Tax">Tax</string>
    <string name="maintenance">Maintenance</string>
    <string name="Maintenance_Type">Maintenance Type</string>
    <string name="Annual">Annual</string>
    <string name="midterm">midterm</string>
    <string name="Quarterly">Quarterly</string>
    <string name="num_maintenance">Num Maintenance</string>
    <string name="The_Cost">The Cost</string>
    <string name="maintenance_history">Maintenance History</string>
    <string name="Worthy">Worthy</string>
    <string name="un_worthy">unworthy</string>
    <string name="What_has_been_fixed">What has been fixed</string>
    <string name="Consumer">Consumer</string>
    <string name="Consumption_value">Consumption value</string>
    <string name="Reason_for_consumption">Reason for consumption</string>
    <string name="consumption_date">consumption date</string>

</resources>