<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activitis.SignUp_Building_information_fragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wave3"
        android:scaleType="fitXY"
        android:contentDescription="TODO" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_building"
            android:layout_marginTop="120dp"
            android:textSize="32sp"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/buiding_logo"
            android:layout_marginTop="120dp"
            android:contentDescription="TODO" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_marginStart="110dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxt_name_of_building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/name_building"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxt_userName"
        android:layout_marginTop="200dp"
        app:startIconDrawable="@drawable/home_logo"



        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"


        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxt_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/area"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxt_userName"
        android:layout_marginTop="270dp"
        app:startIconDrawable="@drawable/area_logo"



        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"


            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/address"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxt_userName"
        android:layout_marginTop="340dp"
        app:startIconDrawable="@drawable/address_logo"



        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"


            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="410dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxt_num_of_floors"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="0dp"
        android:hint="@string/num_of_floors"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxt_userName"

        app:startIconDrawable="@drawable/floors_logo"



        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"


            />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtxt_num_of_apartments"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="2dp"
            android:hint="@string/num_of_apartments"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtxt_userName"

            app:startIconDrawable="@drawable/partmemnts_logo"



            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"


                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="500dp"

        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/type_building"
        android:textSize="32sp"
        android:textColor="#634F56"
        android:layout_marginStart="40dp"

        />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commercial"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residential"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscriber"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />
</RadioGroup>
    </LinearLayout>
    <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:backgroundTint="#FF9800"
            android:textSize="22sp"
            android:textAllCaps="false"

        />
</FrameLayout>