<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Fragment.Admin_Fragment"
    android:orientation="vertical"
    android:background="@drawable/wave3"
    >
    <ImageView
        android:id="@+id/imge_admin_build"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/user_logo"
        />


   <TextView
       android:id="@+id/user_name_build"
       android:gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/userName"
    android:textSize="32sp"
    android:textColor="@color/black"
    android:layout_marginTop="70dp"
       android:background="@drawable/backshape2"
       android:backgroundTint="#E8BDBD"
       android:layout_gravity="center"

    />
    <TextView
        android:id="@+id/id_num_admin_build"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/idNum"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
      android:layout_gravity="center"
        android:background="@drawable/backshape2"
        android:backgroundTint="#E8BDBD"
        />
    <TextView
        android:id="@+id/unm_id_admin_phonenumber"
        android:layout_width="300dp"
        android:gravity="center"

        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/backshape2"
        android:backgroundTint="#E8BDBD"
        />
    <TextView
        android:id="@+id/email_admin_build"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/backshape2"
        android:backgroundTint="#E8BDBD"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF9800"
        android:text="@string/lease"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"

        />

</LinearLayout>